@@ -1,0 +1,16 @@
+package vc4.client.sound;
+
+import java.net.URL;
+
+public class Sound {
+
+	public URL location;
+	public String name;
+
+	public Sound(String name, URL location) {
+		super();
+		this.location = location;
+		this.name = name;
+	}
+
+}
